--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.15.7",
-    "@mui/material": "^5.15.7",
+    "@mui/icons-material": "^5.15.9",
+    "@mui/lab": "^5.0.0-alpha.165",
+    "@mui/material": "^5.15.9",
     "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.7",
     "react": "^18.2.0",
