--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,8 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.24.0",
     "sequelize-cli": "^6.5.1",
-    "sharp": "^0.33.2"
+    "sharp": "^0.33.2",
+    "node-telegram-bot-api": "^0.64.0"
   },
   "devDependencies": {
     "eslint": "^8.24.0",
